fixing utility class for sublist data